<resources>
    <string name="app_name">Camera Pro</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_camera">Camera</string>
    <string name="title_qr">QR</string>
    <string name="title_gallery">Gallery</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission_camera">Needs camera permission, if you want to take a picture.\n\nIf you press "Don't show again" receive permission manually in settings</string>
    <string name="request_permission_location">Needs location permission, if you want to fine location.\n\nIf you press "Don't show again" receive permission manually in settings</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="settings">Settings</string>
    <string name="unable_to_start_camera">Unable to start camera source.</string>
    <string name="detector_not_avail">Detector dependencies are not yet available.</string>
    <string name="camera_not_found">Your phone doesn\'t have camera</string>
    <string name="last">last</string>
    <string name="title_activity_photo_detail">PhotoDetailActivity</string>
    <string name="scan_photo">Scan photo</string>
    <string name="photo">photo</string>
    <string name="log_out">Log Out</string>
    <string name="delete_this_photo">Delete this photo?</string>
    <string name="delete_this_photos">Delete this photos?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="content">Content</string>
    <string name="open_inapp">Open in\n Chrome custom tabs</string>
    <string name="share">SHARE</string>
    <string name="unable_save_res_scan">Unable to save result of scanning</string>
    <string name="qr_history">QR History</string>
    <string name="delete_code">Delete this item?</string>
    <string name="date">date</string>
    <string name="qr_on">QR scanner turned on</string>
    <string name="qr_off">QR scanner turned off</string>
    <string name="clear_photos_db">Clear photos DB</string>
    <string name="clear_codes_db">Clear codes DB</string>
    <string name="delete_all_sc_codes">Do you want to delete all scanning codes?</string>
    <string name="delete_all_photos">Do you want to delete all photos?</string>
    <string name="all_codes_delete">All scanning codes are deleted</string>
    <string name="all_phot_dele">All photos are deleted</string>
    <string name="all_photos_are_deleted">All photos are deleted</string>
    <string name="email_cant_empty">Email field mustn\'t been empty</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="succes_email">Successful validation</string>
    <string name="pass_more_six">Password must contain 6 or more characters</string>
    <string name="pass_fits">Password fits</string>
    <string name="pass_d_match">Passwords don\'t match</string>
    <string name="pass_match">Passwords match</string>
    <string name="face_count">Faces count:\u0020</string>
    <string name="system">System</string>
    <string name="account">Account</string>
    <string name="database">Database</string>
    <string name="camera_core">Camera core</string>
    <string name="google_vision_api">Google vision api</string>
    <string name="camera_api">Camera api</string>
    <string name="camera2_api">Camera2 api</string>
    <string name="delete_account">Delete account</string>
    <string name="acc_will_deleted">Your account will be deleted? Do you want to continue?</string>
    <string name="pilot">This core in development. Pilot mode. To make full use of the application, use google vision core.</string>
    <string name="qr_scanned">QR code is scanned</string>
    <string name="res">result</string>
    <string name="photos_ch_del">Photos are successfully deleted</string>
    <string name="delete">Delete</string>
    <string name="share_low">Share</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Remove selection</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_maps">Maps</string>
    <string name="add_location">Add location to this photo? It\'s may take few time</string>
    <string name="wait">Please. Wait...</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello. This is Camera Pro!</string>
    <string name="slide_1_desc">The easiest way to take and store your photos!</string>

    <string name="slide_2_title">Take Pictures</string>
    <string name="slide_2_desc">Take photos, recognize faces, see photos in the gallery!</string>

    <string name="slide_3_title">Scan qr codes</string>
    <string name="slide_3_desc">Scan the codes, save the result, view the content!</string>

    <string name="slide_4_title">Set a geo-tag</string>
    <string name="slide_4_desc">Put a geo-tag on the photo, see your photos on the map!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="dot_code"><![CDATA[&#8226;]]></string>
</resources>
