<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actions_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="2dp"
    app:cardBackgroundColor="@color/grey_very_lignt"
    app:cardCornerRadius="25dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bt_unchecked_all"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:paddingBottom="20dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/ic_select_all"
            app:layout_constraintEnd_toStartOf="@+id/bt_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bt_share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:paddingBottom="20dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_share_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bt_delete_photos"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:paddingBottom="20dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_share"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="48dp"
            android:padding="2dp"
            android:text="@string/delete"
            android:textColor="@color/yellow_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_delete_photos"
            app:layout_constraintEnd_toEndOf="@+id/bt_delete_photos"
            app:layout_constraintStart_toStartOf="@+id/bt_delete_photos"
            app:layout_constraintTop_toTopOf="@+id/bt_delete_photos" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="48dp"
            android:padding="2dp"
            android:text="@string/share_low"
            android:textColor="@color/yellow_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_share"
            app:layout_constraintEnd_toEndOf="@+id/bt_share"
            app:layout_constraintStart_toStartOf="@+id/bt_share"
            app:layout_constraintTop_toTopOf="@+id/bt_share" />

        <TextView
            android:id="@+id/tv_action_select_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="48dp"
            android:padding="2dp"
            android:text="@string/select_all"
            android:textColor="@color/yellow_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_unchecked_all"
            app:layout_constraintEnd_toEndOf="@+id/bt_unchecked_all"
            app:layout_constraintStart_toStartOf="@+id/bt_unchecked_all"
            app:layout_constraintTop_toTopOf="@+id/bt_unchecked_all" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>